# CPP_TorchNN

./: .gitignore  CMakeLists.txt  README.md
header_files/: Embeddings.h  NN.h  NN_Mod.h  customDataset.h
source_files/: Embeddings.cpp  NN.cpp  NN_Mod.cpp  customDataset.cpp  main.cpp
